--- a/index.html
+++ b/index.html
@@ -13,52 +13,37 @@
         <div class="calculator">
             <div class="calculator-grid">
                 <div class="calculator-display">
-                    <div class="calculator-display-text calculator-display-previous-text">
-                        123432123144444444441232432432432
+                    <div>
+                        1232432432432+
                     </div>
-                    <div class="calculator-display-text">
-                        123432
+                    <div>
+                        12343212314444
                     </div>
                 </div>
-                <div></div>
-                <div></div>
-                <div class="button button-clear">
-                    C
-                </div>
-                <div class="button button-delete">
+                <button class="button-clear span-two">AC</button>
+                <button class="button-delete">
                     <i class="fa-solid fa-delete-left"></i>
-                </div>
-                <div class="button button-number">7</div>
-                <div class="button button-number">8</div>
-                <div class="button button-number">9</div>
-                <div class="button button-divide">
-                    <i class="fa-solid fa-divide"></i>
-                </div>
+                </button>
+                <button class="button-divide">÷</button>
 
-                <div class="button button-number">4</div>
-                <div class="button button-number">5</div>
-                <div class="button button-number">6</div>
-                <div class="button button-multiply">
-                    <i class="fa-solid fa-xmark"></i>
-                </div>
+                <button class="button-number">7</button>
+                <button class="button-number">8</button>
+                <button class="button-number">9</button>
+                <button class="button-multiply">*</button>
 
-                <div class="button button-number">1</div>
-                <div class="button button-number">2</div>
-                <div class="button button-number">3</div>
-                <div class="button button-minus">
-                    <i class="fa-solid fa-minus"></i>
-                </div>
+                <button class="button-number">4</button>
+                <button class="button-number">5</button>
+                <button class="button-number">6</button>
+                <button class="button-minus">-</button>
 
-                <div class="button button-point">
-                    .
-                </div>
-                <div class="button button-number">0</div>
-                <div class="button button-equal">
-                    <i class="fa-solid fa-equals"></i>
-                </div>
-                <div class="button button-plus">
-                    <i class="fa-solid fa-plus"></i>
-                </div>
+                <button class="button-number">1</button>
+                <button class="button-number">2</button>
+                <button class="button-number">3</button>
+                <button class="button-plus">+</button>
+                
+                <button class="button-point">.</button>
+                <button class="button-number">0</button>
+                <button class="button-equal span-two">=</button>
 
             </div>
         </div>
