--- a/index.html
+++ b/index.html
@@ -13,37 +13,37 @@
         <div class="calculator">
             <div class="calculator-grid">
                 <div class="calculator-display">
-                    <div>
+                    <div data-display-previous>
                         1232432432432+
                     </div>
-                    <div>
+                    <div data-display-actual>
                         12343212314444
                     </div>
                 </div>
-                <button class="button-clear span-two">AC</button>
-                <button class="button-delete">
+                <button data-clear class="span-two">AC</button>
+                <button data-delete>
                     <i class="fa-solid fa-delete-left"></i>
                 </button>
-                <button class="button-divide">÷</button>
+                <button data-divide>÷</button>
 
-                <button class="button-number">7</button>
-                <button class="button-number">8</button>
-                <button class="button-number">9</button>
-                <button class="button-multiply">*</button>
+                <button data-number>7</button>
+                <button data-number>8</button>
+                <button data-number>9</button>
+                <button data-multiply>*</button>
 
-                <button class="button-number">4</button>
-                <button class="button-number">5</button>
-                <button class="button-number">6</button>
-                <button class="button-minus">-</button>
+                <button data-number>4</button>
+                <button data-number>5</button>
+                <button data-number>6</button>
+                <button data-minus>-</button>
 
-                <button class="button-number">1</button>
-                <button class="button-number">2</button>
-                <button class="button-number">3</button>
-                <button class="button-plus">+</button>
+                <button data-number>1</button>
+                <button data-number>2</button>
+                <button data-number>3</button>
+                <button data-plus>+</button>
                 
-                <button class="button-point">.</button>
-                <button class="button-number">0</button>
-                <button class="button-equal span-two">=</button>
+                <button data-point>.</button>
+                <button data-number>0</button>
+                <button data-equal class="span-two">=</button>
 
             </div>
         </div>
