create calculator class with all operations

--- a/index.html
+++ b/index.html
@@ -50,5 +50,5 @@
     </div>
     
 </body>
-<script src="site.js" text="text/javascript"></script>
+<script type="module" src="site.js" text="text/javascript"></script>
 </html>
